# AGI-Walker

./: .coverage  .editorconfig  .gitignore  ADVANCED_FEATURES.md  BOM_biped.txt  CHANGELOG.md  COMPILE_OPTIMIZED.md  CONTRIBUTING.md  Dockerfile  FINAL_REPORT.md  FINAL_STATUS.md  GETTING_STARTED.md  HANDS_ON_GUIDE.md  HARDWARE_INTEGRATION_GUIDE.md  HARDWARE_SPEC.md  LICENSE  PARAMETER_CONVERSION_GUIDE.md  PHYSICS_ENVIRONMENT_GUIDE.md  PROJECT_ARCHIVE.md  README.md  RELEASE_NOTES.md  SIMULATION_GUIDE.md  TEST_REPORT.md  build_plugin.bat  build_plugin.sh  custom_robot_config.json  install.bat  install.sh  pytest.ini  requirements-dev.txt  requirements-imitation.txt  requirements-offline-rl.txt  requirements.txt  run_all_tests.py  test_session.json  verify_d3rlpy.py
.github/: PULL_REQUEST_TEMPLATE.md
AGI-Walker/: ADVANCED_USAGE.md  AI_SETUP_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPP_PLUGIN_BUILD.md  GODOT_TESTING_GUIDE.md  OPTIMIZATION_GUIDE.md  PARTS_LIBRARY_GUIDE.md  PID_BALANCE_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RELEASE_NOTES.md  TESTING_GUIDE.md  requirements-hardware.txt  requirements.txt
AGI-Walker/gdextension_src/: BUILD_GUIDE.md  CMakeLists.txt  MINGW_BUILD_GUIDE.md
archive/: v1.0_snapshot.md  v2.0_snapshot.md  v3.0_snapshot.md
blender_scripts/: README.md  create_simple_models.py  generate_simple_icons.py  render_thumbnails.py
configs/: example_biped_gui.json  quadruped_robot.json  robot_physics.json  robot_physics.xml
docs/: 3D_VISUALIZATION_PLAN.md  API_REFERENCE.md  BEGINNER_TUTORIAL.md  COMMUNITY_PLAN.md  COMPLETE_FEATURES.md  CV_IMPLEMENTATION_PLAN.md  ENVIRONMENT_GENERATION.md  GODOT_INTEGRATION_GUIDE.md  GUI_USER_GUIDE.md  HARDWARE_DEPLOYMENT.md  IMC22_WORKFLOW.md  IMITATION_LEARNING.md  LAUNCH_POST.md  MODEL_ZOO.md  MODULAR_ROBOT_BUILDER.md  OFFLINE_RL.md  OPENNEURO_INTEGRATION.md  OPENNEURO_TEST_REPORT.md  PARAMETRIC_CONTROL.md  ROS2_INTEGRATION_DESIGN.md  ROS2_QUICK_START.md  TECH_DEBT_PLAN.md  WEB_PANEL_GUIDE.md  conf.py  demo_video_script.md  index.rst
examples/: README_quick_start.md  batch_data_generation_demo.py  custom_parts_demo.py  dashboard_demo.py  environment_balance_demo.py  imitation_learning_demo.py  my_first_robot_test.py  my_first_robot_train.py  offline_rl_demo.py  parametric_control_demo.py  parametric_control_simple.py  phase1_integration_demo.py  precision_adjustment_demo.py  quadruped_training.py  train_imc22_model.py  walk_1m_demo.py  zenoh_ros2_demo.py
gdextension_src/: build.ps1  build_mingw.ps1
godot_project/: balance_controller.gd.uid  icon.svg.import  main.tscn  project.godot
hive-reflex/: Makefile  README.md
models/: imc22_control_net.py
parts_library/: PARTS_SPECIFICATIONS.md  VALIDATION_REPORT.md  complete_parts_database.json  parts_manager.py  view_parts_detailed.py
python_api/: batch_generator.py  benchmark.py  cost_optimization.py  custom_parts.py  cv_data_generator.py  data_recorder.py  dataset_manager.py  energy_management.py  environment_balance.py  fault_diagnostics.py  gait_generator.py  godot_client.py  godot_vision_client.py  imitation_learning.py  mujoco_backend.py  multimodal_fusion.py  offline_rl.py  optimized_zenoh.py  parametric_control.py  parts_library.json  parts_manager.py  physics_validator.py  precision_adjuster.py  quadruped_env.py  realtime_dashboard.py  ros2_robot_node.py  safety_system.py  sensor_fusion.py  task_editor.py  task_editor_gui.py  task_planning.py  tcp_zenoh_bridge.py  thermal_management.py  vision_processor.py  zenoh_interface.py
python_controller/: ai_controller.py  ai_model.py  async_controller.py  async_tcp_client.py  cloud_sim.py  enhanced_controller.py  evolution_manager.py  fault_injection.py  load_monitor.py  medium_model.py  model_orchestrator.py  onnx_inference.py  parallel_trainer.py  physics_calibrator.py  physics_tuner.py  pid_controller.py  pid_tuner.py  predictive_safety.py  rag_knowledge_base.py  requirements.txt  reward_designer.py  rl_optimizer.py  sim2real_analyzer.py  sim2real_gap.py  tcp_client.py  terrain_mapper.py  test_ai_system.py  test_architecture.py  test_latency.py  test_pid_balance.py  test_suite.py  verify_mocked.py  vision_processor.py
robot_models/: base_robot.py
ros2_ws/: README.md
ros2_ws/src/agi_walker_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/agi_walker_msgs/msg/: Connection.msg  Part.msg  RobotState.msg
ros2_ws/src/agi_walker_msgs/srv/: LoadRobot.srv
ros2_ws/src/agi_walker_ros2/: package.xml  setup.cfg  setup.py
ros2_ws/src/agi_walker_ros2/agi_walker_ros2/: __init__.py  bridge_node.py
ros2_ws/src/agi_walker_ros2/config/: params.yaml
ros2_ws/src/agi_walker_ros2/launch/: agi_walker.launch.py  robot.launch.py
ros2_ws/src/agi_walker_ros2/resource/: agi_walker_ros2
ros2_ws/src/agi_walker_ros2/urdf/: agi_walker.urdf
tests/: GUI_TEST_GUIDE.md  benchmark_performance.py  test_custom_parts.py  test_environment.py  test_extended.py  test_godot_client.py  test_hardware_controller.py  test_integration.py  test_offline_rl.py  test_parts_database.py  validate_parametric_control.py
tools/: gui_godot_patch.txt  imc22_data_preparer.py  imc22_quantizer.py  robot_configurator_gui.py
training/: auto_labeler.py  dataset_cleaner.py  (+3 more)
(+143 files in other folders)
